--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,11 @@ buildscript {
         jcenter()
     }
 
+    ext.kotlin_version = '1.3.31'
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 
