--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  location: ^2.3.5
+  http: ^0.12.0+2
+  latlong: ^0.6.1
 
 dev_dependencies:
   flutter_test:
