--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,11 +4,9 @@ buildscript {
         jcenter()
     }
 
-    ext.kotlin_version = '1.3.31'
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.google.gms:google-services:4.3.1'
     }
 }
 
@@ -17,6 +15,14 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    // The following are only a few examples of the types of properties you can define.
+    compileSdkVersion = 28
+    // You can also create properties to specify versions for dependencies.
+    // Having consistent versions between modules can avoid conflicts with behavior.
+    supportLibVersion = "28.0.0"
 }
 
 rootProject.buildDir = '../build'
